--- a/404.html
+++ b/404.html
@@ -19,24 +19,24 @@
 		
 		<meta property="og:locale" content="en_US">
 		<meta property="og:title" content="404 Page not found">
-		<meta property="og:image" content="https://xuziyan.ga/images/logo2.png">
+		<meta property="og:image" content="https://ziyan1215.github.io/images/logo2.png">
 		<meta property="og:description" content="XuziYan">
 		<meta property="og:site_name" content="XuziYan">
 
 		<title>404 Page not found | Xuzi</title>
-		<link rel="shortcut icon" href="https://xuziyan.ga/images/i.ico">
+		<link rel="shortcut icon" href="https://ziyan1215.github.io/images/i.ico">
 		
 		<link rel="manifest" href="/manifest.json">
-		<link rel="stylesheet" href="https://xuziyan.ga/lib/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://ziyan1215.github.io/lib/font-awesome/css/font-awesome.min.css">
 		
-		<link rel="stylesheet" href="https://xuziyan.ga/lib/justified-gallery/justifiedGallery.min.css">
-		<link rel="stylesheet" href="https://xuziyan.ga/css/style.css">
+		<link rel="stylesheet" href="https://ziyan1215.github.io/lib/justified-gallery/justifiedGallery.min.css">
+		<link rel="stylesheet" href="https://ziyan1215.github.io/css/style.css">
 
 		
 
 		
 		
-		<script src="https://xuziyan.ga/lib/jquery/jquery.min.js"></script>
+		<script src="https://ziyan1215.github.io/lib/jquery/jquery.min.js"></script>
 		<script>
 			document.addEventListener("error", function (e) {
 			  var elem = e.target;
@@ -203,9 +203,9 @@
     </div>
   </footer>
     
-<script src="https://xuziyan.ga/lib/justified-gallery/jquery.justifiedGallery.min.js"></script>
-<script src="https://xuziyan.ga/lib/typed.js"></script>
-<script src="https://xuziyan.ga/js/main.js"></script>
+<script src="https://ziyan1215.github.io/lib/justified-gallery/jquery.justifiedGallery.min.js"></script>
+<script src="https://ziyan1215.github.io/lib/typed.js"></script>
+<script src="https://ziyan1215.github.io/js/main.js"></script>
 
 
 
