--- a/google.html
+++ b/google.html
@@ -1,1 +1,1 @@
-google-site-verification: google541e1b3422feb984.html
+<html><body><p>google-site-verification: google541e1b3422feb984.html</p></body></html>
