--- a/daily/1638860110/index.html
+++ b/daily/1638860110/index.html
@@ -70,155 +70,304 @@ beautifulsoup4' property="og:description"/>
 </form>
 <script src="https://ziyan1215.github.io/js/fuse.js"></script>
 <script src="https://ziyan1215.github.io/js/fixedsearch.js"></script>
-<style>
-	#search-form {
-		display: block;
-		position: fixed;
-		top: 0;
-		right: 0;
-		margin: 0;
-		padding: 0;
-		min-width: var(--icon-size, 1.2rem);
-		max-width: 15rem;
-		max-height: 100vh;
-		z-index: 1000;
-	}
-
-	#search-form.search--display,
-	#search-form[data-focus='false'] .search--display {
-		display: none;
-	}
-
-	#search-form[data-focus='true'] .search--display {
-		display: block;
-	}
-
-	#search-form .search-bar {
-		display: flex;
-		height: 1.4rem;
-		align-items: center;
-	}
- 
-	#search-form .search-bar {
-		background: rgb(var(--page-color, '240,240,240'));
-		color: #2ba55b;
-	}
-
-	#search-form[data-focus='true'] .search-bar {
-		border: 2.5px solid rgb(var(--accent-color, '40.188.138'));
-	}
-
-	#search-form[data-focus='true'] .search-bar:not(:focus-within) {
-		background: rgb(var(--text-color, '3,3,3'));
-		color: #0af185; 
-		border-color: rgb(var(--text-color, '3,3,3'));
-	}
-
-	#search-input {
-		display: block;
-		padding: 0.3rem;
-		width: 15rem;
-		max-width: 100vw;
-		height: 100%;
-
-		background: inherit;
-		border: none;
-		color: inherit;
-		outline: none;
-		text-align: left;
-
-		font-size: var(--s-2, 0.8rem);
-	}
-
-	#search-submit {
-		display: block;
-		margin: 0 var(--icon-pad, 0.1rem) 0 0;
-		padding: 0;
-		width:       var(--icon-size, 1.2rem);
-		height:      var(--icon-size, 1.2rem);
-		line-height: var(--icon-size, 1.2rem);
-
-		background: inherit;
-		color: inherit;
-	}
-
-	#search-submit:hover,
-	#search-submit:focus {
-		color: rgb(var(--accent-color, '40.188.138'));
-	}
-
-	#search-results {
-		display: block;
-		flex-grow: 2;
-		margin: 0.5px 0 0 0;
-		padding: 0;
-		max-height: calc(100vh - 1.4rem - 0.5px);
-		width: 100%;
-		overflow-x: hidden;
-		overflow-y: auto;
-
-		backdrop-filter: blur(var(--page-color-blur, 2px));
-		border: 2.5px solid;
-		color: #2bbc8a; 
-		font-size: var(--s-2, 0.8rem);
-        
-		scrollbar-color: rgb(var(--text-color, '43,165,91')) rgb(var(--page-color, '240,240,240')) !important;
-		scrollbar-width: thin !important;
-	}
-
-	#search-results:empty {
-		display: none;
-		opacity: 0;
-	}
-
-	#search-results li {
-		margin: 0;
-		width: 100%;
-
-		background-color: rgba(var(--page-color, '240,240,240'), var(--page-color-transparency, 0.89));
-		border-top: 0.5px dashed;
-		list-style: none;
-	}
-		#search-results li:first-child {
-			border: none;
-		}
-
-	#search-results a {
-		display: block;
-		padding: 0.3rem;
-		display: block;
-        color: #c9cacc; 
-		text-decoration: none;
-	}
-
-	#search-results a:hover,
-	#search-results a:focus {
-		background: rgb(var(--text-color, '3,3,3'));
-		color: rgb(var(--page-color, '240,240,240'));
-		outline: 0;
-	}
-
-	#search-results a:active {
-		background: rgb(var(--accent-color, '40.188.138'));
-		color: rgb(var(--page-color, '240,240,240'));
-	}
-
-	#search-results li span:empty {
-		display: none;
-	}
-
-	#search-results li span:not(:last-child)::after {
-		content: ' – ';
-	}
-
-	#search-results li .title {
-		display: block;
-		margin-bottom: calc(var(--line-height, 1.4em)/3);
-	}
-
-	#search-results li .title::after {
-		display: none;
-	}
+<style>
+
+	#search-form {
+
+		display: block;
+
+		position: fixed;
+
+		top: 0;
+
+		right: 0;
+
+		margin: 0;
+
+		padding: 0;
+
+		min-width: var(--icon-size, 1.2rem);
+
+		max-width: 15rem;
+
+		max-height: 100vh;
+
+		z-index: 1000;
+
+	}
+
+
+
+	#search-form.search--display,
+
+	#search-form[data-focus='false'] .search--display {
+
+		display: none;
+
+	}
+
+
+
+	#search-form[data-focus='true'] .search--display {
+
+		display: block;
+
+	}
+
+
+
+	#search-form .search-bar {
+
+		display: flex;
+
+		height: 1.4rem;
+
+		align-items: center;
+
+	}
+
+ 
+
+	#search-form .search-bar {
+
+		background: rgb(var(--page-color, '240,240,240'));
+
+		color: #2ba55b;
+
+	}
+
+
+
+	#search-form[data-focus='true'] .search-bar {
+
+		border: 2.5px solid rgb(var(--accent-color, '40.188.138'));
+
+	}
+
+
+
+	#search-form[data-focus='true'] .search-bar:not(:focus-within) {
+
+		background: rgb(var(--text-color, '3,3,3'));
+
+		color: #0af185; 
+
+		border-color: rgb(var(--text-color, '3,3,3'));
+
+	}
+
+
+
+	#search-input {
+
+		display: block;
+
+		padding: 0.3rem;
+
+		width: 15rem;
+
+		max-width: 100vw;
+
+		height: 100%;
+
+
+
+		background: inherit;
+
+		border: none;
+
+		color: inherit;
+
+		outline: none;
+
+		text-align: left;
+
+
+
+		font-size: var(--s-2, 0.8rem);
+
+	}
+
+
+
+	#search-submit {
+
+		display: block;
+
+		margin: 0 var(--icon-pad, 0.1rem) 0 0;
+
+		padding: 0;
+
+		width:       var(--icon-size, 1.2rem);
+
+		height:      var(--icon-size, 1.2rem);
+
+		line-height: var(--icon-size, 1.2rem);
+
+
+
+		background: inherit;
+
+		color: inherit;
+
+	}
+
+
+
+	#search-submit:hover,
+
+	#search-submit:focus {
+
+		color: rgb(var(--accent-color, '40.188.138'));
+
+	}
+
+
+
+	#search-results {
+
+		display: block;
+
+		flex-grow: 2;
+
+		margin: 0.5px 0 0 0;
+
+		padding: 0;
+
+		max-height: calc(100vh - 1.4rem - 0.5px);
+
+		width: 100%;
+
+		overflow-x: hidden;
+
+		overflow-y: auto;
+
+
+
+		backdrop-filter: blur(var(--page-color-blur, 2px));
+
+		border: 2.5px solid;
+
+		color: #2bbc8a; 
+
+		font-size: var(--s-2, 0.8rem);
+
+        
+
+		scrollbar-color: rgb(var(--text-color, '43,165,91')) rgb(var(--page-color, '240,240,240')) !important;
+
+		scrollbar-width: thin !important;
+
+	}
+
+
+
+	#search-results:empty {
+
+		display: none;
+
+		opacity: 0;
+
+	}
+
+
+
+	#search-results li {
+
+		margin: 0;
+
+		width: 100%;
+
+
+
+		background-color: rgba(var(--page-color, '240,240,240'), var(--page-color-transparency, 0.89));
+
+		border-top: 0.5px dashed;
+
+		list-style: none;
+
+	}
+
+		#search-results li:first-child {
+
+			border: none;
+
+		}
+
+
+
+	#search-results a {
+
+		display: block;
+
+		padding: 0.3rem;
+
+		display: block;
+
+        color: #c9cacc; 
+
+		text-decoration: none;
+
+	}
+
+
+
+	#search-results a:hover,
+
+	#search-results a:focus {
+
+		background: rgb(var(--text-color, '3,3,3'));
+
+		color: rgb(var(--page-color, '240,240,240'));
+
+		outline: 0;
+
+	}
+
+
+
+	#search-results a:active {
+
+		background: rgb(var(--accent-color, '40.188.138'));
+
+		color: rgb(var(--page-color, '240,240,240'));
+
+	}
+
+
+
+	#search-results li span:empty {
+
+		display: none;
+
+	}
+
+
+
+	#search-results li span:not(:last-child)::after {
+
+		content: ' – ';
+
+	}
+
+
+
+	#search-results li .title {
+
+		display: block;
+
+		margin-bottom: calc(var(--line-height, 1.4em)/3);
+
+	}
+
+
+
+	#search-results li .title::after {
+
+		display: none;
+
+	}
+
 </style>
 <div id="header-post">
 <a href="#" id="menu-icon"><i class="fa fa-bars fa-lg"></i></a>
@@ -326,7 +475,7 @@ lxml==4.6.3
 <h1 id="上传静态文件进行博客部署">上传静态文件进行博客部署</h1>
 <p>将public发布</p>
 <h1 id="效果展示">效果展示</h1>
-<p>输入<code>password</code>进行查看文章</p>
+<p>输入<code>PASSWORD</code>进行查看文章</p>
 <div class="hugo-encryptor-container">
 <div class="hugo-encryptor-prompt">
 <p>文章的部分内容被密码保护：</p>
